seevooplay/static/seevooplay/css/admin.css
tr.dynamic-reply_set > td:first-child > p {
  display: none;
}

.inline-group .tabular tr.has_original td {
  padding-top: 8px;
}

.trumbowyg-box,
.trumbowyg-editor {
  max-width: 623px;
  min-height: unset;
}

.form-row .datetime input.vDateField {
  margin-left: 7px;
}
.datetime .vDateField,
.datetime .vTimeField {
  min-width: 5rem;
  width: 5rem;
}

